[gd_scene load_steps=4 format=3 uid="uid://dfhphffc1sml0"]

[ext_resource type="Script" path="res://2D/Scenes/GUI/CharacterSheet.gd" id="1_mnhib"]
[ext_resource type="Resource" uid="uid://8sdd4l35tq1j" path="res://2D/Scenes/Characters/Tamaki/TamakiStats.tres" id="2_l6fbp"]
[ext_resource type="SpriteFrames" uid="uid://c0rbe7lty6le8" path="res://Assets/Characters/Tamaki/Tamaki.tres" id="3_q6uah"]

[node name="CharacterSheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mnhib")
Tamakistats = ExtResource("2_l6fbp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0, 0.423529, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(229.5, 244.9)
scale = Vector2(7.14062, 7.65937)
sprite_frames = ExtResource("3_q6uah")
animation = &"idledown"

[node name="Name" type="Label" parent="AnimatedSprite2D"]
anchors_preset = -1
anchor_left = -0.004
anchor_top = -0.058
anchor_right = 1.0
anchor_bottom = 0.301
offset_left = -32.0175
offset_top = -31.9972
offset_right = -32.2735
offset_bottom = -31.9732
grow_horizontal = 2
text = "Tamaki"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Statpoints" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0659722
anchor_top = 0.625
anchor_right = 0.34375
anchor_bottom = 0.709877
theme_override_font_sizes/font_size = 40
text = "Stat Points: 1000"
metadata/_edit_use_anchors_ = true

[node name="Labels" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513465
anchor_top = 0.0123457
anchor_right = 0.708333
anchor_bottom = 0.992284
offset_left = 0.487915
offset_top = -5.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Done Button" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 502.0
offset_right = 262.0
offset_bottom = 647.0
theme_override_font_sizes/font_size = 100
text = "Done"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -653.0
grow_horizontal = 0
grow_vertical = 2

[node name="PhysicalStats" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Physical Stats" type="Label" parent="HBoxContainer/PhysicalStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Physical Stats"

[node name="Strength" type="VBoxContainer" parent="HBoxContainer/PhysicalStats"]
layout_mode = 2
tooltip_text = "Increases Melee Damage"

[node name="strengthlabel" type="Label" parent="HBoxContainer/PhysicalStats/Strength"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Strength: 10"
horizontal_alignment = 1

[node name="strengthbutton" type="Button" parent="HBoxContainer/PhysicalStats/Strength"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "+"

[node name="Dexterity" type="VBoxContainer" parent="HBoxContainer/PhysicalStats"]
layout_mode = 2
tooltip_text = "Increases Ranged Damage"

[node name="dexteritylabel" type="Label" parent="HBoxContainer/PhysicalStats/Dexterity"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Dexterity: 10"
horizontal_alignment = 1

[node name="dexteritybutton" type="Button" parent="HBoxContainer/PhysicalStats/Dexterity"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "+"

[node name="Constitution" type="VBoxContainer" parent="HBoxContainer/PhysicalStats"]
layout_mode = 2
tooltip_text = "Increases Health"

[node name="constitutionlabel" type="Label" parent="HBoxContainer/PhysicalStats/Constitution"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Constitution: 10"
horizontal_alignment = 1

[node name="constitutionbutton" type="Button" parent="HBoxContainer/PhysicalStats/Constitution"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "+"

[node name="MentalStats" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Mental Stats" type="Label" parent="HBoxContainer/MentalStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Mental Stats"

[node name="Intelligence" type="VBoxContainer" parent="HBoxContainer/MentalStats"]
layout_mode = 2
tooltip_text = "Increase Magic damage
Increases Amount of Mana"

[node name="intelligencelabel" type="Label" parent="HBoxContainer/MentalStats/Intelligence"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Intelligence: 10"
horizontal_alignment = 1

[node name="intelligencebutton" type="Button" parent="HBoxContainer/MentalStats/Intelligence"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "+"

[node name="Wisdom" type="VBoxContainer" parent="HBoxContainer/MentalStats"]
layout_mode = 2
tooltip_text = "Increases Mana Regeneration"

[node name="wisdomlabel" type="Label" parent="HBoxContainer/MentalStats/Wisdom"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Wisdom: 10"
horizontal_alignment = 1

[node name="wisdombutton" type="Button" parent="HBoxContainer/MentalStats/Wisdom"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "+"

[connection signal="pressed" from="Done Button" to="." method="DonePressed"]
[connection signal="pressed" from="HBoxContainer/PhysicalStats/Strength/strengthbutton" to="." method="_on_strengthbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/PhysicalStats/Dexterity/dexteritybutton" to="." method="_on_dexteritybutton_pressed"]
[connection signal="pressed" from="HBoxContainer/PhysicalStats/Constitution/constitutionbutton" to="." method="_on_constitutionbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/MentalStats/Intelligence/intelligencebutton" to="." method="_on_intelligencebutton_pressed"]
[connection signal="pressed" from="HBoxContainer/MentalStats/Wisdom/wisdombutton" to="." method="_on_wisdombutton_pressed"]
